syntax = "proto3";

package proto;

option go_package = "./;proto";

service SoundService {
    rpc GetSoundJustHello(ChatClientMessage) returns (stream ChatServerMessage);
    rpc GetSound(EmptyMessage) returns (stream ChatServerMessage);
    rpc SendSound(ChatClientMessage) returns (EmptyMessage);
}

// GetSound(ChatClientMessage) should be GetSound(EmptyMessage)
// SendSound(ChatClientMessage) should return (Int);

message ChatServerMessage {
    bytes data = 1;
    int64 rate = 2;
}

message ChatClientMessage {
    bytes data = 1;
    int64 rate = 2;
    bool ready_to_send = 3;
}

// not to use basic google.Empty now, may be later change 
message EmptyMessage {
}
